--- a/static/index.html
+++ b/static/index.html
@@ -25,7 +25,7 @@
 
         <div class="loading" id="loading">
             <div class="spinner"></div>
-            <p>載入中... <span id="loadProgress">0</span>%</p>
+            <p>載入中... <span id="loadProgress">0%</span></p>
         </div>
 
         <div class="table-container" id="tableContainer">
